Update references from "One Atalian" to "One ASW"

--- a/English/services/proprete.html
+++ b/English/services/proprete.html
@@ -149,7 +149,7 @@
     <div class="wrapper" id="pilotage">
         <div>
             <ul class="why">
-                <li>One Atalian : plateforme dématerialisée pour un pilotage commun de la prestation</li>
+                <li>One ASW : plateforme dématerialisée pour un pilotage commun de la prestation</li>
                 <li>Développement de partenariats pour beneficier des dernières innovations du marché : KOKI, TAQT, Teleric</li>
             </ul>
         </div>
@@ -183,7 +183,7 @@
                 <li>Exosquelettes d’aide au levage : réduisent les troubles musculo-squelettiques, la pénibilité, les accidents de travail</li>
                 <li>BioOrg (produits de nettoyage) : permettent de limiter le développement bactérien</li>
                 <li>Novolyze : amélioration de la nettoyabilité des zones de production par l’utilisation de traceurs fluorescents dans les industries agro-alimentaires</li>
-                <li>One Atalian : plateforme dématérialisée pour un pilotage de la prestation en mode cockpit</li>
+                <li>One ASW : plateforme dématérialisée pour un pilotage de la prestation en mode cockpit</li>
             </ul>
         </div>
         <img class="why" src="assets/Propreté & services associé/light bulb.jpg" alt="">
@@ -232,7 +232,7 @@
                 <h3>Optimiser votre temps</h3>
                 <ul>
                     <li>Gestion des prestations associées avec interlocuteur unique (organisation miroir)</li>
-                    <li>Plateforme de pilotage performance et suivi dématérialisé  avec suivi d’indicateurs (One Atalian, Teleric, Koki)</li>
+                    <li>Plateforme de pilotage performance et suivi dématérialisé  avec suivi d’indicateurs (One ASW, Teleric, Koki)</li>
                 </ul>
             </div>
         </div>
