--- a/about/expertise.html
+++ b/about/expertise.html
@@ -156,7 +156,7 @@
             <img class="pilotage" src="assets/pages/expertise/ActiReport.png" alt="">
         </li>
         <li>
-            <span>One Atalian <br></span>
+            <span>One ASW <br></span>
             <img class="pilotage" src="assets/pages/expertise/one atalian.png" alt="">
         </li>
         <li>
