--- a/services/proprete.html
+++ b/services/proprete.html
@@ -222,7 +222,7 @@
     <div class="wrapper" id="pilotage">
         <div>
             <ul class="why">
-                <li>One Atalian : plateforme dématerialisée pour un pilotage commun de la prestation</li>
+                <li>One ASW : plateforme dématerialisée pour un pilotage commun de la prestation</li>
                 <li>Développement de partenariats pour beneficier des dernières innovations du marché : KOKI, TAQT, Teleric</li>
             </ul>
         </div>
@@ -239,7 +239,7 @@
     <div class="wrapper" id="innovations">
         <div>
             <p class="why">
-                En plus d'Activ’Protect, nos innovations visent à améliorer les conditions de travail, la qualité des services, et à promouvoir le respect de l'environnement. Quelques exemples d'innovations en cours d'utilisation incluent des robots pour le nettoyage, des lunettes connectées pour la formation et l'assistance technique, des exosquelettes pour réduire la pénibilité, des produits de nettoyage limitant le développement bactérien, et une plateforme dématérialisée pour le pilotage de la prestation, appelée One Atalian. Chez A Simple Way, l'innovation est au cœur de notre engagement envers l'excellence.
+                En plus d'Activ’Protect, nos innovations visent à améliorer les conditions de travail, la qualité des services, et à promouvoir le respect de l'environnement. Quelques exemples d'innovations en cours d'utilisation incluent des robots pour le nettoyage, des lunettes connectées pour la formation et l'assistance technique, des exosquelettes pour réduire la pénibilité, des produits de nettoyage limitant le développement bactérien, et une plateforme dématérialisée pour le pilotage de la prestation, appelée One ASW. Chez A Simple Way, l'innovation est au cœur de notre engagement envers l'excellence.
             </p>
         </div>
         <img class="why" src="assets/Propreté & services associé/light bulb.jpg" alt="">
@@ -287,7 +287,7 @@
                 <h3><strong>Optimisation de votre temps</strong></h3>
                 <ul>
                     <li><strong>Gestion Simplifiée : Nous simplifions la gestion des prestations associées en proposant un interlocuteur unique et une organisation miroir.</strong></li>
-                    <li><strong>Plateforme de Pilotage Dématérialisé : </strong>Notre plateforme One Atalian, Teleric, Koki permet un suivi dématérialisé avec des indicateurs de performance en temps réel.</li>
+                    <li><strong>Plateforme de Pilotage Dématérialisé : </strong>Notre plateforme One ASW, Teleric, Koki permet un suivi dématérialisé avec des indicateurs de performance en temps réel.</li>
                 </ul>
                 <p>Chez A Simple Way, nous nous engageons à surpasser vos attentes en offrant des services de qualité exceptionnelle, en innovant de manière constante et en plaçant la responsabilité environnementale au cœur de nos actions. Optez pour une gestion efficace et un environnement optimal avec notre expertise.</p>
             </div>
